<resources>
  <string name="app_name">Macro Tracker</string>
  <string name="title_summary">Summary</string>
  <string name="title_reports">Progress Reports</string>
  <string name="title_settings">Settings</string>
  <string name="add_meal">Add a New Meal</string>

  <!-- Below strings added by LX -->
  <string name="menu_Date">TODAY</string>
  <string name="menu_Cal">0 / 2400 cals</string>
  <string name="menu_Carb">0 / 800 g</string>
  <string name="menu_Protein">0 / 800 g</string>
  <string name="menu_Fat">0 / 400 g</string>
</resources>
