<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".Ui.MainActivity">

    <TextView
        android:id="@+id/menuDate"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/menu_Date" />

    <TextView
        android:id="@+id/menuCal"
        android:layout_width="272dp"
        android:layout_height="62dp"
        android:layout_below="@+id/menuDate"
        android:layout_centerHorizontal="true"
        android:text="@string/menu_Cal" />

    <TextView
        android:id="@+id/menuCarb"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_alignEnd="@+id/menuCal"
        android:layout_below="@+id/menuCal"
        android:text="@string/menu_Carb" />

    <TextView
        android:id="@+id/menuProtein"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_alignEnd="@+id/menuCal"
        android:layout_below="@+id/menuCarb"
        android:text="@string/menu_Protein" />

    <TextView
        android:id="@+id/menuFat"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_alignEnd="@+id/menuCal"
        android:layout_below="@+id/menuProtein"
        android:text="@string/menu_Fat" />

</RelativeLayout>